external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_at.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/invalid_at.move:9:13
  │
9 │             _ @ Option::Some(128u8) => (),
  │             ^ Cannot use '_' as an at-pattern

